log
Thu 25 Apr 2024 01:57:38 AM UTC: 
 hashmap.c | 78 +++++++++++++++++++++++++++++++++++++++++++--------------------
 1 file changed, 54 insertions(+), 24 deletions(-)
 tests:  5|4
total_score: 30/70
295cb14
Thu 25 Apr 2024 02:09:33 AM UTC: 
 hashmap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  5|4
total_score: 30/70
819e5de
Thu 25 Apr 2024 02:12:07 AM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  5|4
total_score: 30/70
dcbd7bb
Thu 25 Apr 2024 02:12:59 AM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  5|4
total_score: 30/70
58b642f
Thu 25 Apr 2024 02:15:32 AM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘eraseMap’:
hashmap.c:84:31: error: suggest parentheses around ‘&&’ within ‘||’ [-Werror=parentheses]
   84 |   while (map->buckets != NULL && map->buckets[pos]->key == NULL ||
      |                               ^
cc1: all warnings being treated as errors
Compilation failed
137adaf
Thu 25 Apr 2024 02:16:08 AM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 30/70
fded479
Thu 25 Apr 2024 02:18:49 AM UTC: 
 hashmap.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
 tests:  5|4
total_score: 30/70
b2cb373
Thu 25 Apr 2024 02:19:13 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
397ab31
Thu 25 Apr 2024 02:20:01 AM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  8|3
total_score: 40/70
0a19daa
Thu 25 Apr 2024 02:29:05 AM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:98:8: error: unused variable ‘aux’ [-Werror=unused-variable]
   98 |   long aux;
      |        ^~~
cc1: all warnings being treated as errors
Compilation failed
d7b1d27
